fix example links in faq.

--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -94,7 +94,7 @@
                             <div class="text">
                                 <span class="color blue">Blue</span> articles are available on the current page, either because they're
                                 open-access without a license, or you're browsing from behind the paywall.
-                                <a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0000308">(example)</a>
+                                <a href="http://www.pnas.org/content/105/31/11014">(example)</a>
 
                             </div>
                         </li>
@@ -105,7 +105,7 @@
                             <div class="text">
                                 <span class="color green">Green</span> articles are available via an open, legal preprint server or
                                 institutional repository.
-                                <a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0000308">(example)</a>
+                                <a href="http://rspa.royalsocietypublishing.org/content/454/1969/277">(example)</a>
 
                             </div>
                         </li>
