fixed typo in GitHub link, thanks @markmacgillivray!
also fix typo in faq.

--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -147,7 +147,7 @@
                     <a href="https://www.datacite.org/">DataCite,</a>
                     and <a href="https://www.base-search.net/">BASE.</a>
 
-                    We in turn make all this data open for reuse
+                    In turn, we make all this data open for reuse via the
                      <a href="http://oadoi.org/about">oaDOI</a> API: a free, fast, and very scalable
                     way to leverage our infrastructure to build your own projects.
                 </dd>
@@ -184,7 +184,7 @@
                 <i class="fa fa-twitter"></i>
                 Twitter
             </a>
-            <a href="http://github.org/Impactstory/unpawall">
+            <a href="https://github.com/Impactstory/unpaywall">
                 <i class="fa fa-github"></i>
                 GitHub
             </a>
