--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -2,7 +2,7 @@
     <div class="top-screen screen" layout="row" layout-align="center center">
         <div class="navbar">
             <img id="logo" src="static/img/logo.png" alt="">
-            <a class="more" href="" ng-click="scrollToAbout()">
+            <a class="questions" href="" ng-click="scrollToAbout()">
                 <i class="fa fa-question-circle-o"></i>
             </a>
         </div>
@@ -31,6 +31,10 @@
                 </span>
             </a>
         </div>
+        <a class="more" href="" ng-click="scrollToAbout()">
+            <i class="fa fa-chevron-down"></i>
+            more
+        </a>
     </div>
 
 
@@ -38,30 +42,7 @@
         <div class="content">
             <h2>FAQ</h2>
             <dl>
-                <dt>Who's behind Unpaywall?</dt>
-                <dd>
-                    We're <a href="http://impactstory.org">Impactstory,</a>
-                    a nonprofit working to supercharge science by making it
-                    more open, reusable, and web-native.
-                </dd>
-
-                <dt>Why did you make it?</dt>
-                <dd>
-                    We got tired of running into paywalled articles! The worst part was, we knew
-                    that millions of researchers are currently uploading their own fulltext PDFs
-                    to <a href="https://en.wikipedia.org/wiki/Preprint">preprint servers</a>
-                    and <a href="https://en.wikipedia.org/wiki/Institutional_repository">institutional repositories,</a>
-                    worldwide, making them free for anyone to read. There was just no easy 
-                    way to find them, especially not one that was integrated into our 
-                    reading workflows. So we made one! Over the longer term, our goal for
-                    Unpaywall is to nurture the transition to a fully
-                    <a href="https://en.wikipedia.org/wiki/Open_access">open access</a>
-                    scholarly publishing model, by closing the gap between readers and
-                    freely-available fulltext.
-
-                </dd>
-
-                <dt>How do I use this?</dt>
+                <dt>How do I use Unpaywall?</dt>
                 <dd>
                     After you
                     <a href="https://chrome.google.com/webstore/detail/unpaywall/iplffkdpngmdjhlpjmppncnlhomiipha">install the extension</a>
@@ -113,6 +94,32 @@
                     </ul>
 
                 </dd>
+
+
+                <dt>Who's behind Unpaywall?</dt>
+                <dd>
+                    We're <a href="http://impactstory.org">Impactstory,</a>
+                    a nonprofit working to supercharge science by making it
+                    more open, reusable, and web-native.
+                </dd>
+
+                <dt>Why did you make it?</dt>
+                <dd>
+                    We got tired of running into paywalled articles! The worst part was, we knew
+                    that millions of researchers are currently uploading their own fulltext PDFs
+                    to <a href="https://en.wikipedia.org/wiki/Preprint">preprint servers</a>
+                    and <a href="https://en.wikipedia.org/wiki/Institutional_repository">institutional repositories,</a>
+                    worldwide, making them free for anyone to read. There was just no easy 
+                    way to find them, especially not one that was integrated into our 
+                    reading workflows. So we made one! Over the longer term, our goal for
+                    Unpaywall is to nurture the transition to a fully
+                    <a href="https://en.wikipedia.org/wiki/Open_access">open access</a>
+                    scholarly publishing model, by closing the gap between readers and
+                    freely-available fulltext.
+
+                </dd>
+
+
 
                 <dt>How often does Unpaywall actually find a free PDF for a given article?</dt>
                 <dd>
