--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -56,7 +56,9 @@
 
                 <dt>What do the different tab colors mean?</dt>
                 <dd>
-                    When we find a free PDF, we use the color of the tab to show where we got it from:
+                    When you view a research article (which Unpaywall defines as one with a
+                    <a href="http://www.apastyle.org/learn/faqs/what-is-doi.aspx">DOI</a>),
+                    you'll see a colored tab on the right of your browser window:
                     <ul>
                         <li>
                             <div class="button gold">
@@ -87,9 +89,23 @@
                                 <span class="color green">Green</span> articles are available via an open, legal preprint server or
                                 institutional repository.
                                 <a href="http://rspa.royalsocietypublishing.org/content/454/1969/277">(example)</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="button black">
+                                <i class="fa fa-lock"></i>
+                            </div>
+                            <div class="text">
+                                <span class="color green">Gray</span> articles don't have any legal open-access version
+                                we could find.
+                                <a href="https://link.springer.com/article/10.1007/BF02300480">(example)</a>
 
                             </div>
                         </li>
+
+                        <!-- example of a paywalled one:
+                        https://link.springer.com/article/10.1007/BF02300480
+                         -->
 
                     </ul>
 
