change images to tab, add early prefs stuff.

--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -7,16 +7,33 @@
             </a>
         </div>
 
-        <div class="content">
+
+        <div class="main-img">
+            <img src="static/img/screenshot.png" alt="">
+        </div>
+
+        <div class="main-copy">
             <div class="tagline">
-                Get open-access versions of paywalled research papers, instantly.
+
+                Click the
+                <span class="tab-word">tab.</span>
+                <span class="tab"> <i class="fa fa-unlock-alt"></i> </span>
+
+
+
+
+                <br>
+                Skip the paywall.
             </div>
+            <img class="arrow" src="static/img/arrow.png" alt="">
             <div class="about">
                 Unpaywall is a free browser extension that automatically links you to free
                 fulltext when you hit paywalls, using our index of over ten
                 million legal, open-access articles.
 
             </div>
+
+            <!--
             <div class="call-to-action-buttons">
                 <a href="https://chrome.google.com/webstore/detail/unpaywall/iplffkdpngmdjhlpjmppncnlhomiipha"
                    class="main-button">
@@ -35,9 +52,6 @@
                    ng-click="fxAddon($event)"
                    class="main-button">
                     <i class="fa fa-firefox"></i>
-                    <!--
-                    <img src="static/img/fx-logo.png" alt="">
-                    -->
                     <span class="text">
                         <span class="big">
                             Free for Firefox
@@ -48,8 +62,14 @@
                     </span>
                 </a>
             </div>
+            -->
 
         </div>
+
+
+
+
+
         <a class="more" href="" ng-click="scrollToAbout()">
             <i class="fa fa-chevron-down"></i>
             more
@@ -285,3 +305,5 @@
 
 
 </script>
+
+http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4183852/
