options get saved on Fx and Chrome.

--- a/extension/options.html
+++ b/extension/options.html
@@ -1,28 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Test Extension Options</title>
+  <title>Unpaywall Extension Options</title>
   <style>
-    body { padding: 10px; }
+    body {
+        padding: 10px;
+        font-family: sans-serif;
+        line-height: 1.5;
+    }
+    #status {
+        min-height: 30px;
+        padding: 0;
+    }
+    p span {
+        /*font-weight: bold;*/
+    }
+    .green {color: #20e168; }
+    .gold {color: #f9bc01;}
+    .blue {color: dodgerblue;}
+      label {
+          font-size: 120%;
+      }
   </style>
 </head>
 
 <body>
-  Favorite color:
-  <select id="color">
-   <option value="red">red</option>
-   <option value="green">green</option>
-   <option value="blue">blue</option>
-   <option value="yellow">yellow</option>
-  </select>
-
   <label>
-    <input type="checkbox" id="like">
-    I like colors.
+    <input type="checkbox" id="show-oa-color">
+    Color-code tab for Green and Gold OA
   </label>
-
+  <p>
+      See a <span class="green">green tab</span> when we find fulltext from an institutional repository or preprint
+      server, and a <span class="gold">gold tab</span> when we find journal-hosted content with an
+      Open license. When we find journal-hosted fulltext with no license you'll get
+      a <span class="blue">blue tab</span>.
+  </p>
   <div id="status"></div>
-  <button id="save">Save</button>
+
+  <hr>
+  <p>
+      For FAQ and contact info, check out <a href="http://unpaywall.org">Unpaywall.org.</a>
+  </p>
 
   <script src="options.js"></script>
 </body>
