--- a/extension/options.html
+++ b/extension/options.html
@@ -39,7 +39,7 @@
 
   <hr>
   <p>
-      For FAQ and contact info, check out <a href="http://unpaywall.org">Unpaywall.org.</a>
+      For FAQ and contact info, check out <a href="http://unpaywall.org">unpaywall.org.</a>
   </p>
 
   <script src="options.js"></script>
