--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -18,6 +18,7 @@
                     Click
                     <span class="the">the</span>
                     <span class="tab"> <i class="fa fa-unlock-alt"></i> </span>
+                    <span class="tab-word">tab.</span>
                     <span class="and">and</span>
                     <span class="period">.</span>
                 </div>
