--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -154,10 +154,9 @@
                 -->
 
 
-                <dt>When do you officially release?</dt>
+                <dt>When is the official release?</dt>
                 <dd>
-                    April 4th. Till then be aware we're
-                    still fixing small bugs and may add new features.
+                    April 4th. The extension mostly works right now, but we're still tweaking things.
                 </dd>
 
                 <dt>Who's behind Unpaywall?</dt>
@@ -172,7 +171,7 @@
                     Millions of researchers are currently uploading their own fulltext PDFs
                     to <a href="https://en.wikipedia.org/wiki/Preprint">preprint servers</a>
                     and <a href="https://en.wikipedia.org/wiki/Institutional_repository">institutional repositories</a>
-                    worldwide, making them free for anyone to read. But there was no easy
+                    worldwide, making them free for anyone to read. But we hated that there was no easy
                     way to find them, especially not one integrated into our
                     reading workflows. So we made one! Eventually, we hope tools like
                     Unpaywall will nurture the transition to fully
