--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -240,9 +240,9 @@
                     and supporting the growing open access movement.
                 </dd>
 
-                <dt>How do you find your fulltext articles?</dt>
+                <dt>How do you find all these fulltext articles?</dt>
                 <dd>
-                    We gather information from thousands of different open-access repositories with the
+                    We gather information from thousands of different legal, open-access repositories with the
                     help many awesome open data sources, especially
                     <a href="https://doaj.org/">the DOAJ,</a>
                     <a href="https://www.crossref.org/">Crossref,</a>
