--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -87,7 +87,7 @@
             <dl>
 
                 <!--
-                <dt>How do I use Unpaywall?</dt>
+                <dt><i class="fa fa-chevron-right"></i>How do I use Unpaywall?</dt>
                 <dd>
                     After you
                     <a href="https://chrome.google.com/webstore/detail/unpaywall/iplffkdpngmdjhlpjmppncnlhomiipha">install the extension</a>
@@ -100,7 +100,7 @@
                 -->
 
                 <!--
-                <dt>What do the different tab colors mean?</dt>
+                <dt><i class="fa fa-chevron-right"></i>What do the different tab colors mean?</dt>
                 <dd>
                     When you view a research article (which Unpaywall defines as one with a
                     <a href="http://www.apastyle.org/learn/faqs/what-is-doi.aspx">DOI</a>),
@@ -156,19 +156,19 @@
                 -->
 
 
-                <dt>When is the official release?</dt>
+                <dt><i class="fa fa-chevron-right"></i>When is the official release?</dt>
                 <dd>
                     April 4th. The extension mostly works right now, but we're still tweaking things.
                 </dd>
 
-                <dt>Who's behind Unpaywall?</dt>
+                <dt><i class="fa fa-chevron-right"></i>Who's behind Unpaywall?</dt>
                 <dd>
                     We're <a href="http://impactstory.org">Impactstory,</a>
                     a nonprofit working to supercharge science by making it
                     more open, reusable, and web-native.
                 </dd>
 
-                <dt>Why did you make it?</dt>
+                <dt><i class="fa fa-chevron-right"></i>Why did you make it?</dt>
                 <dd>
                     Millions of researchers are currently uploading their own fulltext PDFs
                     to <a href="https://en.wikipedia.org/wiki/Preprint">preprint servers</a>
@@ -183,7 +183,7 @@
 
                 </dd>
 
-                <dt>Can Unpaywall tell me whether an article is "Green" or "Gold" OA?</dt>
+                <dt><i class="fa fa-chevron-right"></i>Can Unpaywall tell me whether an article is "Green" or "Gold" OA?</dt>
                 <dd>Indeed we can. Click the green Unpaywall extension icon in
                     your browser toolbar and choose "options." Once there, tick "Color-code tab for Green and Gold OA."
                     Thenceforth, you'll enjoy a veritable rainbow of OA colorfully goodness as you browse different articles:
@@ -218,7 +218,7 @@
 
 
 
-                <dt>How often does Unpaywall find full text?</dt>
+                <dt><i class="fa fa-chevron-right"></i>How often does Unpaywall find full text?</dt>
                 <dd>
                     About 25% of the time, although it varies a lot based on the age
                     and field of the article. The reason it's not 100% is
@@ -229,7 +229,7 @@
 
                 </dd>
 
-                <dt>How's this different from Sci-Hub?</dt>
+                <dt><i class="fa fa-chevron-right"></i>How's this different from Sci-Hub?</dt>
                 <dd>
                     Like Unpaywall, Sci-Hub finds fulltext PDFs for paywalled articles. The main difference
                     is where those PDFs come from: Unpaywall finds PDFs legally uploaded
@@ -242,7 +242,22 @@
                     and supporting the growing open access movement.
                 </dd>
 
-                <dt>How do you find all these fulltext articles?</dt>
+                <dt><i class="fa fa-chevron-right"></i>How's this different from the Open Access Button?</dt>
+                <dd>
+                    The <a href="https://openaccessbutton.org/">OA Button</a> and Unpaywall are similar. But the
+                    OA Button is a more mature project
+                    (it's been working since 2013) with great features Unpaywall lacks.
+                    The OA Button works on
+                    articles without DOIs, and it helps you email a request for fulltext to the author if
+                    none is available. It'll also help you find open datasets.
+                    Unpaywall is more of a one-trick pony, and largely built because folks wanted a demo for the
+                    open <a href="https://oadoi.org">oaDOI</a> API. The great thing is, both are open-source
+                    and free, so you can install both, or
+                    <a href="https://guides.github.com/activities/forking/">fork 'em</a>
+                    and make your own better extension!
+                </dd>
+
+                <dt><i class="fa fa-chevron-right"></i>How do you find all these fulltext articles?</dt>
                 <dd>
                     We gather information from thousands of different legal, open-access repositories with the
                     help many awesome open data sources, especially
@@ -256,7 +271,7 @@
                     way to leverage our infrastructure to build your own projects.
                 </dd>
 
-                <dt>What's your privacy policy?</dt>
+                <dt><i class="fa fa-chevron-right"></i>What's your privacy policy?</dt>
                 <dd>
                     The extension doesn't store or ask for any personal information from you, so when you use Unpaywall
                     we don't know who you are. The extension doesn't track your browsing history, and it
@@ -265,12 +280,12 @@
                     to our server (using an encrypted HTTPS connection) to find any free versions.
                     We will log requests to our servers
                     (which include the DOI and the IP address the request came from) in order to
-                    monitor and improve service. But those logs can't be
+                    monitor and improve service. But those logs aren't
                     connected to your identity. Furthermore, the extension won't send or use
                     any kind of browser fingerprinting technology to identify your computer.
                 </dd>
 
-                <dt>I found a bug</dt>
+                <dt><i class="fa fa-chevron-right"></i>I found a bug</dt>
                 <dd>
                     Sorry about that! Unfortunately this is pretty common, especially where publishers
                     don't follow standard practices for article display (as they often do not).
